--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -68,7 +68,7 @@ td {
   vertical-align: baseline;
   background: transparent;
 }
-body {
+/* body {
   background: #dcdddf url(https://cssdeck.com/uploads/media/items/7/7AF2Qzt.png);
   color: #000;
   font: 14px Arial;
@@ -500,4 +500,4 @@ form:after {
 .button a:hover {
   background-position: 0 -135px;
   color: #00aeef;
-}
+} */
